fix modal clipping issue

--- a/domains/rem/src/ui/Modal/styles.scss
+++ b/domains/rem/src/ui/Modal/styles.scss
@@ -2,6 +2,7 @@
 
 .ee-rem-modal {
 	max-width: 75rem !important;
+	overflow: auto;
 
 	&__body {
 		&--centered {
